--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       Dキー: リモコンのdボタン、B, R, G, Yキー: リモコンの青、赤、緑、黄ボタン、数字キー: リモコンの数字ボタン
     </p>
     <iframe style="display: block; width: 3840px; height: 2160px; zoom: 0.25;"></iframe>
+    <textarea id="messages"></textarea>
     <script type="module" src="/dist/player.js"></script>
   </body>
 </html>
