--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     url:
     <input id="url" type="text" style="width: 100%; display: block;">
     <input id="file" type="file" style="width: 100%; display: block;">
+    <label>
+      <input id="novideo" type="checkbox">
+      映像なし
+    </label>
     <button id="play">
       play
     </button>
@@ -28,7 +32,7 @@
       操作方法: ↓にフォーカス当てる
     </p>
     <p>
-      Dキー: リモコンのdボタン、B, R, G, Yキー: リモコンの青、赤、緑、黄ボタン、数字キー: リモコンの数字ボタン
+      Dキー: リモコンのdボタン、B, R, G, Yキー: リモコンの青、赤、緑、黄ボタン、数字キー: リモコンの数字ボタン、Enterキー: 決定ボタン、Backspaceキー: 戻るボタン
     </p>
     <iframe style="display: block; width: 3840px; height: 2160px; zoom: 0.25;"></iframe>
     <textarea id="messages"></textarea>
